--- a/src/Makefile
+++ b/src/Makefile
@@ -137,6 +137,7 @@ SOURCE_EMU = \
 	emulator/hardware/EmRegsEZPalmV.cpp \
 	emulator/hardware/EmRegsEZPalmIIIc.cpp \
 	emulator/hardware/EmRegsMediaQ11xx.cpp \
+	emulator/hardware/EmRegsVZM1xx.cpp \
 	emulator/hardware/EmBankROM.cpp \
 	emulator/hardware/EmUAEGlue.cpp \
 	emulator/patch/EmPatchModule.cpp \
