Support m130 in SPA, fix build with Emscripten 2.0.18

--- a/src/Makefile
+++ b/src/Makefile
@@ -62,8 +62,7 @@ LDFLAGS_EMCC_WEB = -O3 -Wno-version-check -flto \
 	-s ALLOW_MEMORY_GROWTH=1 \
 	-s INITIAL_MEMORY=67108864 \
 	-s ALLOW_TABLE_GROWTH=1 \
-	-s EXTRA_EXPORTED_RUNTIME_METHODS=["ccall","addFunction"] \
-	-s LLD_REPORT_UNDEFINED
+	-s EXTRA_EXPORTED_RUNTIME_METHODS=["ccall","addFunction"]
 
 BUILDDIR_NATIVE = .build
 DEPDIR_NATIVE = .deps
