--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,5 +99,6 @@
     "__string": "cpp",
     "__threading_support": "cpp"
   },
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "python.venvPath": "${workspaceFolder}/server"
 }
