--- a/cloudpilot-ionic/tsconfig.json
+++ b/cloudpilot-ionic/tsconfig.json
@@ -18,10 +18,11 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "strictTemplates": true
   }
 }
