--- a/cloudpilot-ionic/package.json
+++ b/cloudpilot-ionic/package.json
@@ -63,9 +63,12 @@
     "prettier-plugin-import-sort": "^0.0.6",
     "protractor": "~7.0.0",
     "pwa-asset-generator": "^4.1.1",
+    "raw-loader": "^4.0.2",
+    "svg-inline-loader": "^0.8.2",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.0"
+    "typescript": "~4.1.0",
+    "url-loader": "^4.1.1"
   },
   "description": "Cloudpilot PWA",
   "prettier": {
