Connect to server on netlib open.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,5 +100,9 @@
     "__threading_support": "cpp"
   },
   "editor.formatOnSave": true,
-  "python.venvPath": "${workspaceFolder}/server"
+  "python.venvPath": "${workspaceFolder}/server",
+  "CppHelper.SourcePattern": [
+    "{FILE}.cpp",
+    "{FILE}.c",
+  ]
 }
