--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,9 +100,11 @@
     "__threading_support": "cpp"
   },
   "editor.formatOnSave": true,
-  "python.venvPath": "${workspaceFolder}/server",
   "CppHelper.SourcePattern": [
     "{FILE}.cpp",
     "{FILE}.c",
+  ],
+  "python.analysis.extraPaths": [
+    "${workspaceFolder}/server"
   ]
 }
