--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,7 +105,8 @@
     "semaphore": "cpp",
     "typeindex": "cpp",
     "unordered_set": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "*.ipp": "cpp"
   },
   "editor.formatOnSave": true,
   "CppHelper.SourcePattern": [
