Refactoring, add proper CLI and logging for server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,5 +115,8 @@
   ],
   "python.analysis.extraPaths": [
     "${workspaceFolder}/server"
-  ]
+  ],
+  "[python]": {
+    "editor.codeActionsOnSave": {"source.organizeImports": true}
+  }
 }
