--- a/src/Makefile
+++ b/src/Makefile
@@ -49,7 +49,7 @@ LDFLAGS_EMCC_WEB = -O3 -Wno-version-check -flto \
 	-s INITIAL_MEMORY=67108864 \
 	-s ALLOW_TABLE_GROWTH=1 \
 	-s EXPORTED_FUNCTIONS=["_malloc","_free","_main"] \
-	-s EXTRA_EXPORTED_RUNTIME_METHODS=["ccall","addFunction"]
+	-s EXTRA_EXPORTED_RUNTIME_METHODS=["ccall","addFunction","UTF8ToString"]
 
 BUILDDIR_NATIVE = .build
 DEPDIR_NATIVE = .deps
