Cleanup, silence various exceptions, don't wait for dangling HTTP connections.

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -10,7 +10,7 @@ pyopenssl = "*"
 pyinstaller = "*"
 pywin32-ctypes = "*"
 pyreadline = "*"
-sanic = "*"
+sanic = {ref = "fix-response-after-close", git = "https://github.com/DirtyHairy/sanic.git/"}
 
 [dev-packages]
 
