Silence Sanic, handle CORS.

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -11,6 +11,7 @@ pyinstaller = "*"
 pywin32-ctypes = "*"
 pyreadline = "*"
 sanic = {ref = "fixes", git = "https://github.com/dirtyhairy/sanic"}
+sanic-cors = "*"
 
 [dev-packages]
 
