--- a/cloudpilot-ionic/package.json
+++ b/cloudpilot-ionic/package.json
@@ -37,6 +37,7 @@
     "rxjs": "~7.1.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
+    "whatwg-fetch": "^3.6.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
