--- a/.github/workflows/deploy-githubio.yaml
+++ b/.github/workflows/deploy-githubio.yaml
@@ -1,8 +1,8 @@
-name: Build release
+name: Deploy to github.io
 on:
   push:
     tags:
-      - '*'
+      - '[0-9]+.[0.9]+.[0.9]+'
 env:
   EM_VERSION: 2.0.24
   NODE_VERSION: 14
