--- a/.github/workflows/release-artifafcts.yaml
+++ b/.github/workflows/release-artifafcts.yaml
@@ -5,6 +5,7 @@ on:
       - "*"
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  PYTHON_VERSION: 3.9
 jobs:
   create-release:
     runs-on: ubuntu-20.04
@@ -13,3 +14,20 @@ jobs:
         uses: actions/checkout@v2
       - name: Create release
         run: gh release create ${GITHUB_REF##*/} -d -t "Cloudpilot ${GITHUB_REF##*/}"
+  build-server-macos:
+    runs-on: macos-10.15
+    needs: create-release
+    steps:
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{env.PYTHON_VERSION}}
+          architecture: x64
+      - name: Build and upload
+        run: |
+          pip install pipenv
+          cd server
+          pipenv install
+          pipenv run build
+          mv dist/cloudpilot-server dist/cloudpilot-server-macos-x64
+          gh release upload ${GITHUB_REF##*/} dist/cloudpilot-server-macos-x64
