--- a/.github/workflows/release-artifafcts.yaml
+++ b/.github/workflows/release-artifafcts.yaml
@@ -9,8 +9,9 @@ env:
   TAG: ${GITHUB_REF##*/}
   SERVER_DIRECTORY: cloudpilot-server-${GITHUB_REF##*/}
   RELEASE_NOTES: |
-    **MacOS:** Please run \`xattr -rd com.apply.quarantine cloudpilot-server-${GITHUB_REF##*/}\` in order to
-    remove the server components from quarantine before you run the server for the first time.
+    **ATTENTION MACOS:** Please run \`xattr -rd com.apple.quarantine cloudpilot-server-${GITHUB_REF##*/}\`
+    in order to remove the server components from quarantine before you run the server for the first time.
+    The first start may take a few seconds.
   RELEASE_TITLE: Cloudpilot ${GITHUB_REF##*/}
   ARCHIVE_MACOS: cloudpilot-server-${GITHUB_REF##*/}-macos-x64.zip
 jobs:
@@ -20,7 +21,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Create release
-        run: gh release create ${{ env.TAG }} -d -t "${{ env.TITLE }}" -n "${{ env.RELEASE_NOTES }}"
+        run: gh release create ${{ env.TAG }} -d -t "${{ env.RELEASE_TITLE }}" -n "${{ env.RELEASE_NOTES }}"
   build-server-macos:
     runs-on: macos-10.15
     needs: create-release
