--- a/.github/workflows/release-artifafcts.yaml
+++ b/.github/workflows/release-artifafcts.yaml
@@ -35,6 +35,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build and upload
+        shell: bash
         run: |
           pip install pipenv
           cd server
