--- a/.github/workflows/release-artifafcts.yaml
+++ b/.github/workflows/release-artifafcts.yaml
@@ -15,6 +15,7 @@ env:
   RELEASE_TITLE: Cloudpilot ${GITHUB_REF##*/}
   ARCHIVE_MACOS: cloudpilot-server-${GITHUB_REF##*/}-macos-x64.zip
   ARCHIVE_WINDOWS: cloudpilot-server-${GITHUB_REF##*/}-win-x64.zip
+  ARCHIVE_LINUX: cloudpilot-server-${GITHUB_REF##*/}-linux-x64.tar.gz
 jobs:
   create-release:
     runs-on: ubuntu-20.04
@@ -23,8 +24,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Create release
         run: gh release create ${{ env.TAG }} -d -t "${{ env.RELEASE_TITLE }}" -n "${{ env.RELEASE_NOTES }}"
-  build-server-windows:
-    runs-on: windows-2019
+  build-server-linux:
+    runs-on: ubuntu-20.04
     needs: create-release
     steps:
       - name: Install Python
@@ -39,12 +40,35 @@ jobs:
         run: |
           pip install pipenv
           cd server
+          echo "VERSION = ${TAG}" > version.py
           pipenv install
           pipenv run build
           cd dist
           mv cloudpilot-server ${{ env.SERVER_DIRECTORY }}
-          7z a -r ${{ env.ARCHIVE_WINDOWS }} ${{ env.SERVER_DIRECTORY }}
-          gh release upload ${{ env.TAG }} ${{ env.ARCHIVE_WINDOWS }}
+          tar -czf ${{ env.ARCHIVE_LINUX }} ${{ env.SERVER_DIRECTORY }}
+          gh release upload ${{ env.TAG }} ${{ env.ARCHIVE_LINUX }}
+  #build-server-windows:
+  #  runs-on: windows-2019
+  #  needs: create-release
+  #  steps:
+  #    - name: Install Python
+  #      uses: actions/setup-python@v2
+  #      with:
+  #        python-version: ${{env.PYTHON_VERSION}}
+  #        architecture: x64
+  #    - name: Checkout
+  #      uses: actions/checkout@v2
+  #    - name: Build and upload
+  #      shell: bash
+  #      run: |
+  #        pip install pipenv
+  #        cd server
+  #        pipenv install
+  #        pipenv run build
+  #        cd dist
+  #        mv cloudpilot-server ${{ env.SERVER_DIRECTORY }}
+  #        7z a -r ${{ env.ARCHIVE_WINDOWS }} ${{ env.SERVER_DIRECTORY }}
+  #        gh release upload ${{ env.TAG }} ${{ env.ARCHIVE_WINDOWS }}
   #build-server-macos:
   #  runs-on: macos-10.15
   #  needs: create-release
@@ -57,6 +81,7 @@ jobs:
   #    - name: Checkout
   #      uses: actions/checkout@v2
   #    - name: Build and upload
+  #      shell: bash
   #      run: |
   #        pip install pipenv
   #        cd server
