--- a/.github/workflows/release-artifafcts.yaml
+++ b/.github/workflows/release-artifafcts.yaml
@@ -40,55 +40,57 @@ jobs:
         run: |
           pip install pipenv
           cd server
-          echo 'VERSION = "${TAG}"' > version.py
+          echo "VERSION = \"${TAG}\"" > version.py
           pipenv install
           pipenv run build
           cd dist
           mv cloudpilot-server ${{ env.SERVER_DIRECTORY }}
           tar -czf ${{ env.ARCHIVE_LINUX }} ${{ env.SERVER_DIRECTORY }}
           gh release upload ${{ env.TAG }} ${{ env.ARCHIVE_LINUX }}
-  #build-server-windows:
-  #  runs-on: windows-2019
-  #  needs: create-release
-  #  steps:
-  #    - name: Install Python
-  #      uses: actions/setup-python@v2
-  #      with:
-  #        python-version: ${{env.PYTHON_VERSION}}
-  #        architecture: x64
-  #    - name: Checkout
-  #      uses: actions/checkout@v2
-  #    - name: Build and upload
-  #      shell: bash
-  #      run: |
-  #        pip install pipenv
-  #        cd server
-  #        pipenv install
-  #        pipenv run build
-  #        cd dist
-  #        mv cloudpilot-server ${{ env.SERVER_DIRECTORY }}
-  #        7z a -r ${{ env.ARCHIVE_WINDOWS }} ${{ env.SERVER_DIRECTORY }}
-  #        gh release upload ${{ env.TAG }} ${{ env.ARCHIVE_WINDOWS }}
-  #build-server-macos:
-  #  runs-on: macos-10.15
-  #  needs: create-release
-  #  steps:
-  #    - name: Install Python
-  #      uses: actions/setup-python@v2
-  #      with:
-  #        python-version: ${{env.PYTHON_VERSION}}
-  #        architecture: x64
-  #    - name: Checkout
-  #      uses: actions/checkout@v2
-  #    - name: Build and upload
-  #      shell: bash
-  #      run: |
-  #        pip install pipenv
-  #        cd server
-  #        pipenv install
-  #        pipenv run build
-  #        cd dist
-  #        codesign -fs - cloudpilot-server/cloudpilot-server
-  #        mv cloudpilot-server ${{ env.SERVER_DIRECTORY }}
-  #        zip -r ${{ env.ARCHIVE_MACOS }} ${{ env.SERVER_DIRECTORY }}
-  #        gh release upload ${{ env.TAG }} ${{ env.ARCHIVE_MACOS }}
+  build-server-windows:
+    runs-on: windows-2019
+    needs: create-release
+    steps:
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{env.PYTHON_VERSION}}
+          architecture: x64
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build and upload
+        shell: bash
+        run: |
+          pip install pipenv
+          cd server
+          echo "VERSION = \"${TAG}\"" > version.py
+          pipenv install
+          pipenv run build
+          cd dist
+          mv cloudpilot-server ${{ env.SERVER_DIRECTORY }}
+          7z a -r ${{ env.ARCHIVE_WINDOWS }} ${{ env.SERVER_DIRECTORY }}
+          gh release upload ${{ env.TAG }} ${{ env.ARCHIVE_WINDOWS }}
+  build-server-macos:
+    runs-on: macos-10.15
+    needs: create-release
+    steps:
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{env.PYTHON_VERSION}}
+          architecture: x64
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build and upload
+        shell: bash
+        run: |
+          pip install pipenv
+          cd server
+          echo "VERSION = \"${TAG}\"" > version.py
+          pipenv install
+          pipenv run build
+          cd dist
+          codesign -fs - cloudpilot-server/cloudpilot-server
+          mv cloudpilot-server ${{ env.SERVER_DIRECTORY }}
+          zip -r ${{ env.ARCHIVE_MACOS }} ${{ env.SERVER_DIRECTORY }}
+          gh release upload ${{ env.TAG }} ${{ env.ARCHIVE_MACOS }}
