Fix dependencies for MacOS *and* windows.

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -13,6 +13,7 @@ pyreadline = "*"
 sanic = {ref = "fixes", git = "https://github.com/dirtyhairy/sanic"}
 sanic-cors = "*"
 pefile = "*"
+macholib = "*"
 
 [dev-packages]
 
