--- a/.github/workflows/release-artifafcts.yaml
+++ b/.github/workflows/release-artifafcts.yaml
@@ -40,7 +40,7 @@ jobs:
         run: |
           pip install pipenv
           cd server
-          echo "VERSION = \"${TAG}\"" > version.py
+          echo "VERSION = \"${{ env.TAG }}\"" > version.py
           pipenv install
           pipenv run build
           cd dist
@@ -63,7 +63,7 @@ jobs:
         run: |
           pip install pipenv
           cd server
-          echo "VERSION = \"${TAG}\"" > version.py
+          echo "VERSION = \"${{ env.TAG }}\"" > version.py
           pipenv install
           pipenv run build
           cd dist
@@ -86,7 +86,7 @@ jobs:
         run: |
           pip install pipenv
           cd server
-          echo "VERSION = \"${TAG}\"" > version.py
+          echo "VERSION = \"${{ env.TAG }}\"" > version.py
           pipenv install
           pipenv run build
           cd dist
