--- a/server/Pipfile
+++ b/server/Pipfile
@@ -21,5 +21,5 @@ macholib = "*"
 python_version = "3"
 
 [scripts]
-cli = "python cli.py"
-build = "pyinstaller -n cloudpilot-server --collect-submodules websockets.legacy cli.py"
+cloudpilot-server = "python cloudpilot-server.py"
+build = "pyinstaller -n cloudpilot-server --collect-submodules websockets.legacy cloudpilot-server.py"
