--- a/cloudpilot-ionic/package.json
+++ b/cloudpilot-ionic/package.json
@@ -38,6 +38,7 @@
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "whatwg-fetch": "^3.6.2",
+    "worker-timers": "^7.0.37",
     "yet-another-abortcontroller-polyfill": "^0.0.4",
     "zone.js": "~0.11.4"
   },
