Add additional icons to SW cache.

--- a/cloudpilot-ionic/ngsw-config.json
+++ b/cloudpilot-ionic/ngsw-config.json
@@ -38,6 +38,9 @@
           "/svg/help-outline.svg",
           "/svg/volume-mute-outline.svg",
           "/svg/volume-high-outline.svg",
+          "/svg/lock-open-outline.svg",
+          "/svg/lock-closed-outline.svg",
+          "/svg/sync-outline.svg",
           "/assets/**",
           "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ]
