--- a/server/proto/Makefile
+++ b/server/proto/Makefile
@@ -1,7 +1,7 @@
 PROTOC = protoc
 
 networking_pb2.py: ../../proto/networking.proto
-	$(PROTOC) --python_out=. -I $(dir $<) $(notdir $<)
+	$(PROTOC) --python_out=. --mypy_out=. -I $(dir $<) $(notdir $<)
 
 clean:
 	-rm -f networking_pb2.py
