Finish framebuffer / RAM unification

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -118,5 +118,6 @@
   ],
   "[python]": {
     "editor.codeActionsOnSave": {"source.organizeImports": true}
-  }
+  },
+  "typescript.tsdk": "./cloudpilot-ionic/node_modules/typescript/lib"
 }
