--- a/.github/workflows/release-artifafcts.yaml
+++ b/.github/workflows/release-artifafcts.yaml
@@ -41,7 +41,7 @@ jobs:
           pip install pipenv
           cd server
           echo "VERSION = \"${{ env.TAG }}\"" > version.py
-          pipenv install
+          pipenv install --python ${{ env.PYTHON_VERSION }}
           pipenv run build
           cd dist
           mv cloudpilot-server ${{ env.SERVER_DIRECTORY }}
@@ -64,7 +64,7 @@ jobs:
           pip install pipenv
           cd server
           echo "VERSION = \"${{ env.TAG }}\"" > version.py
-          pipenv install
+          pipenv install --python ${{ env.PYTHON_VERSION }}
           pipenv run build
           cd dist
           mv cloudpilot-server ${{ env.SERVER_DIRECTORY }}
@@ -87,7 +87,7 @@ jobs:
           pip install pipenv
           cd server
           echo "VERSION = \"${{ env.TAG }}\"" > version.py
-          pipenv install
+          pipenv install --python ${{ env.PYTHON_VERSION }}
           pipenv run build
           cd dist
           codesign -fs - cloudpilot-server/cloudpilot-server
