--- a/cloudpilot-ionic/package.json
+++ b/cloudpilot-ionic/package.json
@@ -28,6 +28,7 @@
     "@ionic/angular": "^5.8.1",
     "@types/deep-equal": "^1.0.1",
     "@types/md5": "^2.3.1",
+    "@types/url-parse": "^1.4.4",
     "@types/uuid": "^8.3.1",
     "async-mutex": "^0.3.2",
     "deep-equal": "^2.0.5",
@@ -36,6 +37,7 @@
     "ngx-markdown": "^12.0.1",
     "rxjs": "~7.3.0",
     "tslib": "^2.3.1",
+    "url-parse": "^1.5.3",
     "uuid": "^8.3.2",
     "whatwg-fetch": "^3.6.2",
     "worker-timers": "^7.0.40",
