--- a/src/Makefile
+++ b/src/Makefile
@@ -157,6 +157,7 @@ SOURCE_EMU = \
 	emulator/hardware/clie/EmRegsExpCardCLIE.cpp \
 	emulator/hardware/clie/EmRegsUsbCLIE.cpp \
 	emulator/hardware/clie/EmRegsEzPegS300.cpp \
+	emulator/hardware/clie/EmRegsVZPegNasca.cpp \
 	emulator/hardware/handera/EmRegs330CPLD.cpp \
 	emulator/hardware/handera/EmRegsVZHandEra330.cpp \
 	emulator/hardware/handera/EmSPISlave330Current.cpp \
