--- a/src/Makefile
+++ b/src/Makefile
@@ -156,8 +156,10 @@ SOURCE_EMU = \
 	emulator/hardware/EmUAEGlue.cpp \
 	emulator/hardware/clie/EmRegsExpCardCLIE.cpp \
 	emulator/hardware/clie/EmRegsUsbCLIE.cpp \
+	emulator/hardware/clie/EmRegsFMSound.cpp \
 	emulator/hardware/clie/EmRegsEzPegS300.cpp \
 	emulator/hardware/clie/EmRegsVZPegNasca.cpp \
+	emulator/hardware/clie/EmRegsVZPegVenice.cpp \
 	emulator/hardware/handera/EmRegs330CPLD.cpp \
 	emulator/hardware/handera/EmRegsVZHandEra330.cpp \
 	emulator/hardware/handera/EmSPISlave330Current.cpp \
