--- a/src/Makefile
+++ b/src/Makefile
@@ -161,6 +161,7 @@ SOURCE_EMU = \
 	emulator/hardware/clie/EmRegsVZPegNasca.cpp \
 	emulator/hardware/clie/EmRegsVZPegVenice.cpp \
 	emulator/hardware/clie/EmRegsVZPegYellowStone.cpp \
+	emulator/hardware/clie/EmRegsVZPegModena.cpp \
 	emulator/hardware/handera/EmRegs330CPLD.cpp \
 	emulator/hardware/handera/EmRegsVZHandEra330.cpp \
 	emulator/hardware/handera/EmSPISlave330Current.cpp \
