--- a/src/Makefile
+++ b/src/Makefile
@@ -162,6 +162,8 @@ SOURCE_EMU = \
 	emulator/hardware/clie/EmRegsVZPegVenice.cpp \
 	emulator/hardware/clie/EmRegsVZPegYellowStone.cpp \
 	emulator/hardware/clie/EmRegsVZPegModena.cpp \
+	emulator/hardware/clie/EmRegsVZPegN700C.cpp \
+	emulator/hardware/clie/EmRegsUsbPegN700C.cpp \
 	emulator/hardware/handera/EmRegs330CPLD.cpp \
 	emulator/hardware/handera/EmRegsVZHandEra330.cpp \
 	emulator/hardware/handera/EmSPISlave330Current.cpp \
