--- a/.github/workflows/release-artifafcts.yaml
+++ b/.github/workflows/release-artifafcts.yaml
@@ -12,7 +12,7 @@ env:
     **MacOS:** Please run \`xattr -rd com.apple.quarantine cloudpilot-server-${GITHUB_REF##*/}\`
     in order to remove the server components from quarantine before you run the server for
     the first time. The first start may take a few seconds.
-  RELEASE_TITLE: Cloudpilot ${GITHUB_REF##*/}
+  RELEASE_TITLE: CloudpilotEmu ${GITHUB_REF##*/}
   ARCHIVE_MACOS: cloudpilot-server-${GITHUB_REF##*/}-macos-x64.zip
   ARCHIVE_WINDOWS: cloudpilot-server-${GITHUB_REF##*/}-win-x64.zip
   ARCHIVE_LINUX: cloudpilot-server-${GITHUB_REF##*/}-linux-x64.tar.gz
