Towards YSX1230 support. Does not finish boot yet.

--- a/src/Makefile
+++ b/src/Makefile
@@ -163,6 +163,8 @@ SOURCE_EMU = \
 	emulator/hardware/clie/EmRegsVZPegVenice.cpp \
 	emulator/hardware/clie/EmRegsVZPegYellowStone.cpp \
 	emulator/hardware/clie/EmRegsVZPegModena.cpp \
+	emulator/hardware/clie/EmRegsSZNaples.cpp \
+	emulator/hardware/clie/EmRegsSZRedwood.cpp \
 	emulator/hardware/clie/EmRegsVZPegN700C.cpp \
 	emulator/hardware/clie/EmRegsUsbPegN700C.cpp \
 	emulator/hardware/handera/EmRegs330CPLD.cpp \
