--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -14,6 +14,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "noImplicitOverride": true,
     "strict": true,
     "lib": [
       "es2018",
