--- a/web/angular.json
+++ b/web/angular.json
@@ -12,9 +12,12 @@
       "schematics": {},
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
             "outputPath": "build-pwa",
+            "customWebpackConfig": {
+              "path": "./webpack.pwa.config.js"
+            },
             "index": "pwa/src/index.html",
             "main": "pwa/src/main.ts",
             "polyfills": "pwa/src/polyfills.ts",
@@ -112,7 +115,7 @@
           "defaultConfiguration": ""
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
             "browserTarget": "app:build"
           },
