--- a/web/package.json
+++ b/web/package.json
@@ -47,6 +47,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^13.1.0",
     "@angular-devkit/build-angular": "~13.1.2",
     "@angular/cli": "~13.1.2",
     "@angular/compiler": "~13.1.1",
@@ -72,6 +73,7 @@
     "protractor": "~7.0.0",
     "pwa-asset-generator": "^6.0.5",
     "raw-loader": "^4.0.2",
+    "svgo": "^2.8.0",
     "ts-loader": "^9.2.8",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.0",
