Refactor skins + display service.

--- a/web/pwa/tsconfig.app.json
+++ b/web/pwa/tsconfig.app.json
@@ -11,7 +11,8 @@
   "include": [
     "src/main.ts",
     "src/**/*.d.ts",
-    "..src/**/*.d.ts"
+    "../common/**/*.ts",
+    "../common/**/*.d.ts",
   ],
   "exclude": [
     "src/**/*.spec.ts"
